tests/negative/optimizer/select-sum.orng
fn main() -> Int
    let x: (a: Int | b: Int) = .a <- 4
    x.b